@@ -1,3 +1,11 @@
+* Wed Dec 23 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.4
+- Fixed:
+  - Ensure that dracut_rebuild is called when the fips kernel parameter is
+    changed
+  - Try to call fips-mode-setup (EL8+) before falling back to the raw dracut
+    command
+  - Fixed the acceptance test fact checks
+
 * Fri Dec 18 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.4
 - Removed EL6 support
 
